--- a/app/src/main/res/layout/movie_item.xml
+++ b/app/src/main/res/layout/movie_item.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:fresco="http://schemas.android.com/tools"
+    xmlns:fresco="http://schemas.android.com/apk/res-auto"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_gravity="center"
@@ -11,15 +11,17 @@
         android:id="@+id/movieBgd"
         android:layout_width="120dp"
         android:layout_height="180dp"
-        android:background="@color/palette_2"
+        android:background="@color/white"
         android:contentDescription="@string/movie_desc"
         android:scaleType="fitXY"
+        android:src="@drawable/logo_movieman"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         fresco:actualImageScaleType="centerCrop"
         fresco:fadeDuration="100"
+        fresco:failureImage="@drawable/logo_movieman"
         fresco:placeholderImage="@drawable/logo_movieman"
         fresco:viewAspectRatio="0.67" />
 
