--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,6 +10,7 @@
     <dimen name="btn_back_border_thickness">1dp</dimen>
     <dimen name="margin_12dp">12dp</dimen>
     <dimen name="margin_16dp">16dp</dimen>
+    <dimen name="margin_32dp">32dp</dimen>
     <dimen name="pad_4dp">4dp</dimen>
     <dimen name="pad_2dp">2dp</dimen>
     <dimen name="margin_2dp">2dp</dimen>
